Criado Classe Venda e refatorado controllers e services.