@@ -1,6 +1,11 @@
 package com.test.venda.domain.service;
 
+import com.test.venda.api.dto.request.VendaRequest;
+import com.test.venda.api.dto.response.VendaResponse;
+import com.test.venda.api.mappers.VendaMapper;
+import com.test.venda.domain.entity.Cliente;
 import com.test.venda.domain.entity.Venda;
+import com.test.venda.domain.entity.Vendedor;
 import com.test.venda.domain.exceptions.NegocioException;
 import com.test.venda.domain.repository.ClienteRepository;
 import com.test.venda.domain.repository.ProdutoRepository;
@@ -25,88 +30,45 @@ import java.util.stream.Collectors;
 public class VendaService {
 
     private final VendaRepository vendaRepository;
-
     private final ClienteRepository clienteRepository;
-
-    private final ProdutoRepository produtoRepository;
-
     private final VendedorRepository vendedorRepository;
+    private final ProdutoRepository produtoRepository;
+    private final VendaMapper mapper;
 
+    public VendaResponse criarVenda(VendaRequest request) {
+        Venda venda = mapper.toEntity(request);
 
-    public List<Venda> listarTodos(){
-        List<Venda> vendas = vendaRepository.findAll();
-        if(vendas.isEmpty()) {
-            throw new NegocioException("Nenhuma venda cadastrado no sistema!");
-        }
-        return vendas;
+        venda.setCliente(buscarCliente(venda.getCliente().getId()));
+        venda.setVendedor(buscarVendedor(venda.getVendedor().getId()));
+        venda.setProduto(buscarProdutos(venda));
+        venda.setValorTotal(calcularValorTotal(venda.getProduto()));
+        venda.setDataVenda(LocalDateTime.now());
+
+        Venda salvo = vendaRepository.save(venda);
+        return mapper.toModel(salvo);
     }
 
-    public Optional<Venda> buscarPorId(Long id) {
-        Optional<Venda> venda = vendaRepository.findById(id);
-
-        if(venda.isEmpty()){
-            throw new NegocioException("Produto não encontrado!");
-        }
-        return venda;
-    }
-
-    public Venda criarVenda(Venda venda) {
-
-        var cliente = clienteRepository.findById(venda.getCliente().getId())
+    private Cliente buscarCliente(Long id) {
+        return clienteRepository.findById(id)
                 .orElseThrow(() -> new NegocioException("Cliente não encontrado!"));
-        venda.setCliente(cliente);
+    }
 
-        var vendedor = vendedorRepository.findById(venda.getVendedor().getId())
+    private Vendedor buscarVendedor(Long id) {
+        return vendedorRepository.findById(id)
                 .orElseThrow(() -> new NegocioException("Vendedor não encontrado!"));
-        venda.setVendedor(vendedor);
+    }
 
-        var produtos = produtoRepository.findAllById(
-                venda.getProduto()
-                        .stream()
-                        .map(Produto::getId)
-                        .collect(Collectors.toList())
-        );
+    private List<Produto> buscarProdutos(Venda venda) {
+        return venda.getProduto().stream()
+                .map(p -> produtoRepository.findById(p.getId())
+                        .orElseThrow(() -> new NegocioException("Produto não encontrado!")))
+                .toList();
+    }
 
-        if (produtos.isEmpty()) {
-            throw new NegocioException("Nenhum produto válido foi informado!");
-        }
-
-        venda.setProduto(produtos);
-
-        BigDecimal valorTotal = produtos.stream()
+    private BigDecimal calcularValorTotal(List<Produto> produtos) {
+        return produtos.stream()
                 .map(Produto::getPreco)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        venda.setValorTotal(valorTotal);
-        venda.setDataVenda(LocalDateTime.now());
-        return vendaRepository.save(venda);
     }
-
-    private void defineCliente(Venda venda) {
-        var cliente = clienteRepository.findById(venda.getCliente()
-                .getId())
-                .orElseThrow(() -> new NegocioException("Cliente não encontrado!"));
-        venda.setCliente(cliente);
-    }
-
-    private void defineVendedor(Venda venda) {
-        var vendedor = vendedorRepository.findById(venda.getVendedor()
-                .getId())
-                .orElseThrow(() -> new NegocioException("Vendedor não encontrado!"));
-        venda.setVendedor(vendedor);
-    }
-
-    private void defineProdutos(Venda venda) {
-        var produtos = produtoRepository.findAllById(venda.getProduto()
-                .stream()
-                .map(Produto::getId)
-                .collect(Collectors.toList()));
-        if (produtos.isEmpty()) {
-            throw new NegocioException("Produtos não encontrados!");
-        }
-        venda.setProduto(produtos);
-    }
-
-
 
 }
